# false-success-lab

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DCO.md  GOVERNANCE.md  MARKETING.md  Makefile  README.md  RENAME_REPO.md  ROADMAP.md  SECURITY.md  SUPPORT.md  TRADEMARKS.md  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  scanner_lab_bug.yml  scenario.yml  scenario_bug.yml  scenario_request.yml  ui_bug.yml
.github/workflows/: pages.yml
docs/: STATE.md  result-grouping-note.md  scenario-contributions.md  ui-redesign-note.md
refund_demo/: config.py  view_model.py  web.py  workflow.py
refund_demo/static/: app.js  hero_run.json  index.html  styles.css
scripts/: capture_demo_notes.md  generate_demo_reports.py  generate_hero_fixture.py  reset_runs.py  run_demo.sh
tests/: test_readme_assets.py  test_static_copy.py  test_web_app.py  test_workflow.py
