[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-consistency-refund-demo"
version = "0.3.0"
description = "False Success Lab: interactive scenarios and repo scanner for agent-consistency."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Karim Baidar", email = "karimbaidar@yahoo.com" }
]
keywords = [
  "ai-agents",
  "llm",
  "multi-agent",
  "workflow",
  "false-success",
  "repo-scanner",
  "guardrails",
  "observability",
  "reliability",
  "outcome-verification",
  "agentic-ai",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: FastAPI",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
  "agent-consistency>=0.2.0,<0.4.0",
  "fastapi>=0.115,<0.129",
  "uvicorn>=0.30,<0.40"
]

[project.urls]
Homepage = "https://github.com/karimbaidar/agent-consistency-refund-demo"
Repository = "https://github.com/karimbaidar/agent-consistency-refund-demo"
Demo = "https://karimbaidar.github.io/agent-consistency-refund-demo/"
Issues = "https://github.com/karimbaidar/agent-consistency-refund-demo/issues"

[tool.setuptools.packages.find]
include = ["refund_demo*"]

[tool.setuptools.package-data]
refund_demo = ["static/*"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
