# Vercel uses this app metadata to install backend dependencies.
# False Success Lab is not published as a Python package.
[project]
name = "false-success-lab"
version = "0.3.0"
description = "Interactive app for false-success scenarios and scanner report cards."
requires-python = ">=3.9"
dependencies = [
    "agent-consistency @ git+https://github.com/karimbaidar/agent-consistency.git@10d1616b2a6e8a178b8ee2f8d8212d3cf552498d",
    "fastapi>=0.115,<0.129",
    "uvicorn>=0.30,<0.40",
]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.vercel]
entrypoint = "refund_demo.web:app"
